--- a/frontend/site-app/package.json
+++ b/frontend/site-app/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "next": "14.1.1",
-    "next-i18n-router": "^5.3.1",
+    "next-intl": "^3.9.1",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -20,7 +20,6 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "sass": "^1.71.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
