--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -19,6 +19,24 @@ services:
       restart_policy:
         condition: on-failure
 
+  kremlin-indexer:
+    image: ${REGISTRY}/feed-kremlin-indexer:${IMAGE_TAG}
+    build:
+      dockerfile: Dockerfile_kremlin
+    depends_on:
+      - registry
+    networks:
+      - feed-parser-net
+    environment:
+      CONFIG_PATH: './config/kremlin/local.yaml'
+    command: './feed-kremlin-indexer'
+    deploy:
+      replicas: 0
+      placement:
+        constraints: [ node.role == manager ]
+      restart_policy:
+        condition: none
+
 networks:
   traefik-public:
     external: true
