--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,21 @@ services:
       restart_policy:
         condition: on-failure
 
+  kremlin-indexer:
+    image: ${REGISTRY:-localhost:5002}/feed-kremlin-indexer:main-1
+    build:
+      dockerfile: Dockerfile_kremlin
+    depends_on:
+      - registry
+    networks:
+      - feed-parser-net
+    environment:
+      CONFIG_PATH: './config/kremlin/local.yaml'
+    command: './feed-kremlin-indexer'
+    deploy:
+      restart_policy:
+        condition: on-failure
+
 networks:
   traefik-public:
     external: true
