--- a/Dockerfile_mil
+++ b/Dockerfile_mil
@@ -10,7 +10,7 @@ RUN go mod download
 COPY . .
 
 RUN --mount=type=cache,target=/root/.cache/go-build \
-    CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -tags netgo -ldflags '-w -extldflags "-static"' -o ./feed-kremlin-indexer ./cmd/indexer/kremlin
+    CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -tags netgo -ldflags '-w -extldflags "-static"' -o ./feed-mil-indexer ./cmd/indexer/mil
 
 # 2
 
@@ -18,10 +18,10 @@ FROM scratch
 
 WORKDIR /app
 
-COPY --from=builder /app/feed-kremlin-indexer /app/feed-kremlin-indexer
+COPY --from=builder /app/feed-mil-indexer /app/feed-mil-indexer
 #COPY --from=builder /app/config /app/config
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=builder /usr/share/zoneinfo /usr/share/zoneinfo
 ENV TZ=Europe/Moscow
 
-CMD ["./feed-kremlin-indexer"]
+CMD ["./feed-mil-indexer"]
