--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -32,8 +32,29 @@ services:
     volumes:
       - config:/app/config
     environment:
-      CONFIG_PATH: './config/kremlin/local.yaml'
+      CONFIG_PATH: './config/kremlin/prod.yaml'
     command: './feed-kremlin-indexer'
+    deploy:
+      replicas: 0
+      placement:
+        constraints: [ node.role == manager ]
+      restart_policy:
+        condition: none
+
+
+  mil-indexer:
+    image: ${REGISTRY}/feed-mil-indexer:${IMAGE_TAG}
+    build:
+      dockerfile: Dockerfile_mil
+    depends_on:
+      - registry
+    volumes:
+      - config:/app/config
+    networks:
+      - feed-parser-net
+    environment:
+      CONFIG_PATH: './config/mil/prod.yaml'
+    command: './feed-mil-indexer'
     deploy:
       replicas: 0
       placement:
