--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,8 +42,9 @@ services:
       CONFIG_PATH: './config/kremlin/local.yaml'
     command: './feed-kremlin-indexer'
     deploy:
+      replicas: 0
       restart_policy:
-        condition: on-failure
+        condition: none
 
   mil-indexer:
     image: ${REGISTRY:-localhost:5002}/feed-mil-indexer:main-1
@@ -59,8 +60,9 @@ services:
       CONFIG_PATH: './config/mil/local.yaml'
     command: './feed-mil-indexer'
     deploy:
+      replicas: 0
       restart_policy:
-        condition: on-failure
+        condition: none
 
 volumes:
   config:
