--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -3,8 +3,14 @@ name: Go
 on:
   push:
     branches: [ main ]
+    paths-ignore:
+      - '**/README.md'
+      - '.github/**'
   pull_request:
     branches: [ main ]
+    paths-ignore:
+      - '**/README.md'
+      - '.github/**'
 
 env:
   REGISTRY: ghcr.io/terratensor
