--- a/config/prod.yaml
+++ b/config/prod.yaml
@@ -4,6 +4,9 @@ delay: 300s
 random_delay: 150s
 manticore_index: feed
 entry_chan_buffer: 20
+splitter:
+  opt_chunk_size: 1800 # оптимальный размер фрагмента контента для поиска, на эти фрагменты будет разбит контент
+  max_chunk_size: 3600 # максимальный размер фрагмента контента для поиска
 parsers:
   - url: "http://kremlin.ru/events/all/feed/"
     lang: "ru"
