--- a/config/local.yaml
+++ b/config/local.yaml
@@ -2,8 +2,11 @@ env: "local" # Окружение - local, dev или prod
 workers: 2
 delay: 60s
 random_delay: 150s
-manticore_index: feed
+manticore_index: feed_new
 entry_chan_buffer: 20
+splitter:
+  opt_chunk_size: 1800 # оптимальный размер фрагмента контента для поиска, на эти фрагменты будет разбит контент
+  max_chunk_size: 3600 # максимальный размер фрагмента контента для поиска
 parsers:
   - url: "http://kremlin.ru/events/all/feed/"
     lang: "ru"
@@ -11,9 +14,9 @@ parsers:
   - url: "http://en.kremlin.ru/events/all/feed"
     lang: "en"
     resource_id: 1
-  - url: "https://mid.ru/ru/rss.php"
-    lang: "ru"
-    resource_id: 2
+#  - url: "https://mid.ru/ru/rss.php"
+#    lang: "ru"
+#    resource_id: 2
 #  - url: "https://mid.ru/en/rss.php"
 #    lang: "en"
 #    resource_id: 2
