--- a/config/local.yaml
+++ b/config/local.yaml
@@ -8,12 +8,12 @@ splitter:
   opt_chunk_size: 1800 # оптимальный размер фрагмента контента для поиска, на эти фрагменты будет разбит контент
   max_chunk_size: 3600 # максимальный размер фрагмента контента для поиска
 parsers:
-  - url: "http://kremlin.ru/events/all/feed/"
-    lang: "ru"
-    resource_id: 1
-  - url: "http://en.kremlin.ru/events/all/feed"
-    lang: "en"
-    resource_id: 1
+#  - url: "http://kremlin.ru/events/all/feed/"
+#    lang: "ru"
+#    resource_id: 1
+#  - url: "http://en.kremlin.ru/events/all/feed"
+#    lang: "en"
+#    resource_id: 1
 #  - url: "https://mid.ru/ru/rss.php"
 #    lang: "ru"
 #    resource_id: 2
