--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - config:/app/config
     environment:
       CONFIG_PATH: './config/local.yaml'
+      INDEX_NOW_KEY: 'HnZJOup42wLcpbCJTYA1d1V7afW76gXkjBf1gXQZ9jSO0KRWyH2zRH8qnlF75w3x'
     command: './feed-parser-service'
     deploy:
       replicas: 1
