--- a/config/prod.yaml
+++ b/config/prod.yaml
@@ -14,9 +14,11 @@ parsers:
   - url: "http://en.kremlin.ru/events/all/feed"
     lang: "en"
     resource_id: 1
-#  - url: "https://mid.ru/ru/rss.php"
-#    lang: "ru"
-#    resource_id: 2
+  - url: "https://mid.ru/ru/rss.php"
+    lang: "ru"
+    resource_id: 2
+    delay: 60s
+    random_delay: 150s
 #  - url: "https://mid.ru/en/rss.php"
 #    lang: "en"
 #    resource_id: 2
