--- a/Dockerfile_srv
+++ b/Dockerfile_srv
@@ -21,6 +21,8 @@ WORKDIR /app
 COPY --from=builder /app/feed-server /app/feed-server
 COPY --from=builder /app/static /app/static
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
+# Корневой сертификат удостоверяющего центра (УЦ) Минцифры
+COPY --from=builder /app/certs/ /etc/ssl/certs/
 COPY --from=builder /usr/share/zoneinfo /usr/share/zoneinfo
 ENV TZ=Europe/Moscow
 
