--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -5,6 +5,7 @@ services:
     image: ${REGISTRY}/feed-parser-service:${IMAGE_TAG}
     networks:
       - feed-parser-net
+      - monitoring-internal
     volumes:
       - config:/app/config
     environment:
@@ -24,6 +25,7 @@ services:
       GENERATOR_DELAY: '300s'
     networks:
       - feed-parser-net
+      - monitoring-internal
     volumes:
       - static:/app/static
     command: './feed-static-generator'
@@ -38,6 +40,7 @@ services:
     networks:
       - traefik-public
       - feed-parser-net
+      - monitoring-internal
     volumes:
       - static:/app/static
     command: './feed-server'
@@ -60,6 +63,7 @@ services:
     image: ${REGISTRY}/feed-kremlin-indexer:${IMAGE_TAG}
     networks:
       - feed-parser-net
+      - monitoring-internal
     volumes:
       - config:/app/config
     environment:
@@ -79,6 +83,7 @@ services:
       - config:/app/config
     networks:
       - feed-parser-net
+      - monitoring-internal
     environment:
       CONFIG_PATH: './config/mil/prod.yaml'
     command: './feed-mil-indexer'
@@ -95,6 +100,7 @@ services:
       - config:/app/config
     networks:
       - feed-parser-net
+      - monitoring-internal
     environment:
       CONFIG_PATH: './config/mid/prod.yaml'
     command: './feed-mid-indexer'
