--- a/prometheus.yml
+++ b/prometheus.yml
@@ -5,3 +5,7 @@ scrape_configs:
   - job_name: 'rss_server'
     static_configs:
       - targets: ['host.docker.internal:8000']  # Адрес вашего сервера
+  
+  - job_name: 'feed-service-parser'
+    static_configs:
+      - targets: ['host.docker.internal:8080']  # Укажите IP и порт вашего сервиса
