--- a/config/local.yaml
+++ b/config/local.yaml
@@ -14,10 +14,12 @@ parsers:
   - url: "http://kremlin.ru/events/all/feed/"
     lang: "ru"
     resource_id: 1
+    user_agent: "SvoddProgram/0.01"
 
   - url: "http://en.kremlin.ru/events/all/feed"
     lang: "en"
     resource_id: 1
+    user_agent: "SvoddProgram/0.01"
 
   - url: "https://mid.ru/ru/rss.php"
     lang: "ru"
@@ -38,15 +40,19 @@ parsers:
 #    lang: "pt"
 #    resource_id: 2
 
-  - url: "https://function.mil.ru/rss_feeds/reference_to_general.htm?contenttype=xml"
-    lang: "ru"
-    resource_id: 3
-    user_agent: "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/111.0.0.0 Safari/537.36"
-    crawler:
-      random_delay_min: 10
-      random_delay_max: 30
-      sleep_min: 10
-      sleep_max: 40
-      user_agent: "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/111.0.0.0 Safari/537.36"
-      max_retries: 5
-      retry_delay: 2s
+  # - url: "https://function.mil.ru/rss_feeds/reference_to_general.htm?contenttype=xml"
+  #   lang: "ru"
+  #   resource_id: 3
+  #   user_agent: "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/111.0.0.0 Safari/537.36"
+  #   crawler:
+  #     random_delay_min: 10
+  #     random_delay_max: 30
+  #     sleep_min: 10
+  #     sleep_max: 40
+  #     user_agent: "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/111.0.0.0 Safari/537.36"
+  #     max_retries: 5
+  #     retry_delay: 2s
+  # - url: ""
+  #   lang: "ru"
+  #   resource_id: 3
+  #   user_agent: "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/111.0.0.0 Safari/537.36"
